[package]
name = "enum_primitive"
version = "0.0.1"
license = "MIT"
description = "Macro to generate num::FromPrimitive instances for enum that works in Rust 1.0"
authors = ["Anders Kaseorg <andersk@mit.edu>"]
repository = "https://github.com/andersk/enum_primitive-rs.git"
homepage = "https://github.com/andersk/enum_primitive-rs"

[dependencies]
num = "0.1"
